[gd_scene load_steps=9 format=2]

[ext_resource path="res://RPGFightFramework/scripts/modeler/mapLayout/PopupMenu.gd" type="Script" id=1]
[ext_resource path="res://RPGFightFramework/scripts/modeler/mapLayout/menu.gd" type="Script" id=2]
[ext_resource path="res://RPGFightFramework/scripts/modeler/mapLayout/viewport.gd" type="Script" id=3]
[ext_resource path="res://RPGFightFramework/scripts/modeler/mapLayout/libraryMaps.gd" type="Script" id=4]
[ext_resource path="res://RPGFightFramework/scenes/modeleur/MapMiniature.tscn" type="PackedScene" id=5]
[ext_resource path="res://RPGFightFramework/scenes/modeleur/Tree.tscn" type="PackedScene" id=6]

[sub_resource type="GDScript" id=1]

resource_name = "map_layout_modeler"
script/source = "extends Control

########################################################################################################################################
###################################################		SIGNALS	########################################################################
########################################################################################################################################
signal newMapSignal
signal changeMapSignal
signal refreshMiniaturesSignal
signal addCaracteristicSignal
signal addMapLevelDownSignal
signal addGroupSignal
signal unselectAll
signal addCell
signal selectCell

########################################################################################################################################
###################################################		MEMBERS	########################################################################
########################################################################################################################################
var m_map
var m_mapRoot

########################################################################################################################################
###################################################		METHODS	########################################################################
########################################################################################################################################
func on_sprite_input(var sprite):
	var positionOrder = sprite.get_position_in_parent()
	var parent = sprite.get_parent()
	for i in range(positionOrder+1):
		var spriteToDelete = parent.get_child(positionOrder - i)
		parent.remove_child(spriteToDelete)
		spriteToDelete.queue_free()
	
func _on_newMap(var map):
	if(m_map):
		var viewport = m_map.get_parent()
		viewport.set_clear_mode(Viewport.CLEAR_MODE_ONLY_NEXT_FRAME)
		yield(get_tree(), \"idle_frame\")
		yield(get_tree(), \"idle_frame\")
		var img = viewport.get_texture().get_data()
		img.flip_y()
		var tex = ImageTexture.new()
		tex.create_from_image(img)
		viewport.set_clear_mode(Viewport.CLEAR_MODE_ALWAYS)
		emit_signal(\"refreshMiniaturesSignal\", m_map, tex)
	else:
		m_mapRoot = map
	emit_signal(\"changeMapSignal\", map)
	emit_signal(\"newMapSignal\", map)
	m_map = map

func _on_changeMap(var map):
	if(m_map):
		var viewport = m_map.get_parent()
		viewport.set_clear_mode(Viewport.CLEAR_MODE_ONLY_NEXT_FRAME)
		yield(get_tree(), \"idle_frame\")
		yield(get_tree(), \"idle_frame\")
		var img = viewport.get_texture().get_data()
		img.flip_y()
		var tex = ImageTexture.new()
		tex.create_from_image(img)
		viewport.set_clear_mode(Viewport.CLEAR_MODE_ALWAYS)
		emit_signal(\"refreshMiniaturesSignal\", m_map, tex)
		emit_signal(\"changeMapSignal\", map)
	m_map = map
	
func on_saveMap():
	_on_changeMap(m_mapRoot)
	var informations = $Tree.getInformation()
	print(informations)
	
func on_addCaracteristic(var carac):
	emit_signal(\"addCaracteristicSignal\", carac)
	
func on_addMapLevelDown(var nameMap):
	emit_signal(\"addMapLevelDownSignal\", nameMap)
	
func on_addGroup(var group):
	emit_signal(\"addGroupSignal\", group)
	
func on_clickRightMap(var index):
	var result = m_map.addOverlaySelection(index)
	if result == 0 || result == 1:
		if result == 1:
			emit_signal(\"addCell\", index)
		emit_signal(\"selectCell\", index)
	else:
		emit_signal(\"unselectAll\")

func on_clickLeftCellMap(var index):
	if m_map.isOverlayCellAtIndex(index):
		var popupMenu = $PopupMenu
		popupMenu.set_position(get_viewport().get_mouse_position())
		# Modification of the submenu group, add existent group
		popupMenu.buildSubMenuGroup(index)
		popupMenu.set_visible(true)"
_sections_unfolded = [ "Resource" ]

[sub_resource type="GDScript" id=2]

script/source = "extends AcceptDialog

var m_index = -1

func init():
	var listMapNames = get_node(\"../VBoxContainer/HBoxContainer/LevelMapsScrollContainer/GridContainer\").getListMapNames()
	var menu = get_node(\"VBoxContainer/MenuButton\").get_popup()
	menu.clear()
	for n in listMapNames:
		menu.add_item(n)
	menu.connect(\"index_pressed\", self, \"on_indexPressed\")
	
func on_indexPressed(var index):
	m_index = index"

[node name="MapLayout" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = SubResource( 1 )

[node name="PopupMenu" type="PopupMenu" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
items = [ "Set as selection mode", null, false, false, false, 0, 0, null, "", false, "Add condition other level", null, false, false, false, 1, 0, null, "", false ]
hide_on_state_item_selection = false
script = ExtResource( 1 )
_sections_unfolded = [ "Popup" ]

[node name="MenuContainer" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="MenuButton" type="MenuButton" parent="MenuContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 35.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "File"
flat = true
align = 1
items = [ "New map...", null, false, false, false, 0, 0, null, "", false, "Save map...", null, false, false, false, 1, 0, null, "", false ]
script = ExtResource( 2 )

[node name="VSeparator" type="VSeparator" parent="MenuContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_right = 43.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Historic" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 102.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "Theme" ]

[node name="ScrollContainer" type="ScrollContainer" parent="Historic" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Rect", "Scroll", "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Historic/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="ViewportContainer" type="ViewportContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 102.0
margin_top = 20.0
margin_right = 818.0
margin_bottom = 557.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
stretch = false
stretch_shrink = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "Theme" ]

[node name="Viewport" type="Viewport" parent="ViewportContainer" index="0"]

arvr = false
size = Vector2( 716, 537 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
script = ExtResource( 3 )
_sections_unfolded = [ "GUI", "Physics", "Render Target", "Rendering", "Shadow Atlas" ]

[node name="MapsLibrary" type="Control" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 818.0
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 557.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="LevelMapsScrollContainer" type="ScrollContainer" parent="MapsLibrary" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Scroll", "Size Flags", "Theme" ]

[node name="GridContainer" type="GridContainer" parent="MapsLibrary/LevelMapsScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 206.0
margin_bottom = 537.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource( 4 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags" ]
MINIATURE_MAP_SCENE = ExtResource( 5 )
m_defaultNumber = 0

[node name="Tree" parent="." index="5" instance=ExtResource( 6 )]

margin_top = 557.0
margin_right = 1024.0
margin_bottom = 768.0

[node name="AskForNameSelectPopUpable" type="AcceptDialog" parent="." index="6"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 95.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Alerte !"
resizable = false
dialog_hide_on_ok = true

[node name="VBoxContainer" type="VBoxContainer" parent="AskForNameSelectPopUpable" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="AskForNameSelectPopUpable/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "\"Write the name of the group:\""
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="AskForNameSelectPopUpable/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 58.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="AskForMapPopUp" type="AcceptDialog" parent="." index="7"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 95.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Choose map"
resizable = false
dialog_hide_on_ok = true
script = SubResource( 2 )
_sections_unfolded = [ "Dialog" ]

[node name="VBoxContainer" type="VBoxContainer" parent="AskForMapPopUp" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 177.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="AskForMapPopUp/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Choose the map in the list"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MenuButton" type="MenuButton" parent="AskForMapPopUp/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 12.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Map names"
flat = true
align = 1
items = [  ]

[connection signal="addCaracteristicSignal" from="." to="Tree" method="on_addCaracteristic"]

[connection signal="addCell" from="." to="Tree" method="addCellItem"]

[connection signal="addGroupSignal" from="." to="Tree" method="on_addGroup"]

[connection signal="addMapLevelDownSignal" from="." to="Tree" method="on_addMapLevelDown"]

[connection signal="changeMapSignal" from="." to="Tree" method="on_loadMap"]

[connection signal="changeMapSignal" from="." to="ViewportContainer/Viewport" method="changeMap"]

[connection signal="newMapSignal" from="." to="MapsLibrary/LevelMapsScrollContainer/GridContainer" method="addMap"]

[connection signal="refreshMiniaturesSignal" from="." to="MapsLibrary/LevelMapsScrollContainer/GridContainer" method="refreshMiniature"]

[connection signal="selectCell" from="." to="Tree" method="selectCellItem"]

[connection signal="unselectAll" from="." to="Tree" method="unselectAll"]

[connection signal="addCaracteristic" from="PopupMenu" to="." method="on_addCaracteristic"]

[connection signal="addGroup" from="PopupMenu" to="." method="on_addGroup"]

[connection signal="addMapLevelDown" from="PopupMenu" to="." method="on_addMapLevelDown"]

[connection signal="index_pressed" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_index_pressed"]

[connection signal="newMapSignal" from="MenuContainer/MenuButton" to="." method="_on_newMap"]

[connection signal="saveMapSignal" from="MenuContainer/MenuButton" to="." method="on_saveMap"]

[connection signal="mouse_entered" from="ViewportContainer" to="ViewportContainer/Viewport" method="_on_ViewportContainer_mouse_entered"]

[connection signal="mouse_exited" from="ViewportContainer" to="ViewportContainer/Viewport" method="_on_ViewportContainer_mouse_exited"]

[connection signal="changeMap" from="Tree" to="." method="_on_changeMap"]


